--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-preset-es2015-without-strict": "0.0.4",
     "babel-preset-react": "^6.16.0",
     "flux": "^3.1.0",
+    "handy-tools": "^0.1.3",
     "lodash": "^4.17.4",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
