--- a/package.json
+++ b/package.json
@@ -1,22 +1,8 @@
 {
   "name": "film-manager",
-  "version": "1.0.0",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/plemiszki/film-manager.git"
-  },
-  "description": "== README",
-  "main": "index.js",
-  "directories": {
-    "test": "test"
-  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "heroku-postbuild": "webpack --config webpack.config.prod.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "babel-core": "^6.20.0",
     "babel-loader": "^6.2.9",
@@ -24,14 +10,13 @@
     "babel-preset-react": "^6.16.0",
     "flux": "^3.1.0",
     "handy-tools": "^1.25.1",
-    "lodash": "^4.17.11",
+    "lodash": "4.17.11",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-modal": "^1.6.4",
     "webpack": "^1.14.0"
   },
   "engines": {
-    "node": "4.1.1",
-    "npm": "2.1.x"
+    "node": "10.9.0"
   }
 }
