--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "change-case": "3.1.0",
     "flux": "^3.1.0",
     "handy-components": "1.33.2",
-    "handy-tools": "2.6.3",
+    "handy-tools": "2.7.0",
     "jquery": "3.5.0",
     "jquery-match-height": "0.7.2",
     "lodash": "4.17.13",
@@ -21,7 +21,7 @@
     "redux": "4.0.1",
     "redux-thunk": "2.3.0",
     "webpack": "4.29.6",
-    "webpack-cli": "3.3.0"
+    "webpack-cli": "^3.3.11"
   },
   "engines": {
     "node": "10.9.0"
