--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "6.0.1",
     "redux": "4.0.1",
     "redux-thunk": "2.3.0",
+    "styled-jsx": "^3.4.4",
     "webpack": "4.29.6",
     "webpack-cli": "^3.3.12"
   },
