create invoice from virtual booking

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "film-manager",
   "scripts": {
     "heroku-postbuild": "webpack --mode production",
-    "start": "webpack --watch"
+    "dev": "webpack --watch"
   },
   "dependencies": {
     "@babel/core": "7.4.0",
