--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-loader": "8.0.5",
     "change-case": "3.1.0",
     "handy-components": "3.5.0",
+    "handy-tools": "2.13.2",
     "jquery": "3.5.0",
     "jquery-match-height": "0.7.2",
     "lodash": "4.17.21",
