--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "@babel/preset-react": "7.0.0",
     "babel-loader": "8.0.5",
     "change-case": "3.1.0",
-    "handy-components": "3.6.1",
+    "handy-components": "3.6.3",
     "handy-tools": "2.13.2",
     "jquery": "3.5.0",
     "jquery-match-height": "0.7.2",
     "lodash": "4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-modal": "3.8.1",
-    "styled-jsx": "^3.4.4",
+    "react-modal": "3.15.1",
+    "styled-jsx": "5.0.7",
     "webpack": "4.29.6",
     "webpack-cli": "^3.3.12"
   },
