--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@babel/preset-react": "7.0.0",
     "babel-loader": "8.0.5",
     "change-case": "3.1.0",
-    "handy-components": "3.6.3",
+    "handy-components": "3.6.4",
     "handy-tools": "2.13.2",
     "jquery": "3.5.0",
     "jquery-match-height": "0.7.2",
@@ -18,8 +18,8 @@
     "react-dom": "18.2.0",
     "react-modal": "3.15.1",
     "styled-jsx": "5.0.7",
-    "webpack": "4.29.6",
-    "webpack-cli": "^3.3.12"
+    "webpack": "5.74.0",
+    "webpack-cli": "4.10.0"
   },
   "engines": {
     "node": "16.14.2"
