--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node": "20.11.1"
   },
   "devDependencies": {
-    "eslint": "^8.57.0"
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1"
   }
 }
