--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "eslint": "^8.57.0",
+    "eslint-plugin-eqeqeq-fix": "^1.0.3",
     "eslint-plugin-react": "^7.34.1"
   }
 }
