--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint": "^8.0.0",
     "eslint-plugin-eqeqeq-fix": "^1.0.3",
     "eslint-plugin-react": "^7.34.1",
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "typescript": "^5.4.4"
   }
 }
