--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "node": "20.12.0"
   },
   "devDependencies": {
+    "@types/react": "^18.2.74",
+    "@types/react-dom": "^18.2.24",
     "eslint": "^8.0.0",
     "eslint-plugin-eqeqeq-fix": "^1.0.3",
     "eslint-plugin-react": "^7.34.1",
