--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "webpack-cli": "^5.0.0"
   },
   "engines": {
-    "node": "22.21.0"
+    "node": "22.x"
   },
   "devDependencies": {
     "@types/react": "^18.2.74",
